tests/baselines/reference/genericDerivedTypeWithSpecializedBase2.errors.txt
tests/cases/compiler/genericDerivedTypeWithSpecializedBase2.ts(11,1): error TS2322: Type 'B<number>' is not assignable to type 'A<{ length: number; foo: number; }>'.
  Types of property 'x' are incompatible.
    Type 'string' is not assignable to type '{ length: number; foo: number; }'.


==== tests/cases/compiler/genericDerivedTypeWithSpecializedBase2.ts (1 errors) ====
    class A<T extends { length: number }> {
        x: T;
    }
    
    class B<U> extends A<string> {
        y: U;
    }
    
    var x: A<{ length: number; foo: number }>;
    var y: B<number>;
    x = y;  // error
    ~
!!! error TS2322: Type '{|B|0|}<number>' is not assignable to type '{|A|1|}<{ {|length|2|}: number; {|foo|3|}: number; }>'.
!!! error TS2322:   Types of property 'x' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type '{ {|length|4|}: number; {|foo|5|}: number; }'.
!!! annotated symbol 0 tests/cases/compiler/genericDerivedTypeWithSpecializedBase2.ts:5:7
!!! annotated symbol 1 tests/cases/compiler/genericDerivedTypeWithSpecializedBase2.ts:1:7
!!! annotated symbol 2 tests/cases/compiler/genericDerivedTypeWithSpecializedBase2.ts:9:12
!!! annotated symbol 3 tests/cases/compiler/genericDerivedTypeWithSpecializedBase2.ts:9:28
!!! annotated symbol 4 tests/cases/compiler/genericDerivedTypeWithSpecializedBase2.ts:9:12
!!! annotated symbol 5 tests/cases/compiler/genericDerivedTypeWithSpecializedBase2.ts:9:28
    